--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -22,7 +22,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
-monitor=DP-2,preferred,auto,1.6
+monitor=DP-2,preferred,auto,auto
 
 ###################
 ### MY PROGRAMS ###
