- add modules.json for better seperation of modules from waybar config - add launch.sh to set waybar configurations - update hyprland to add keybind to reload waybar

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -219,6 +219,7 @@ bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
+bind = $mainMod SHIFT, B, exec, sh ~/.config/waybar/launch.sh
 bind = , home, exec, hyprshot -m window
 bind = shift, home, exec, hyprshot -m region
 bind = $SUPER_SHIFT, l, exec, hyprlock
