--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -47,6 +47,7 @@ $menu = wofi --show drun
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
+exec-once = sh ~/.config/waybar/launch.sh
 exec-once = waybar & swaync & hypridle & nm-applet --indicator & hyprpaper & blueman-applet
 
 #############################
