--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -220,7 +220,8 @@ bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
-bind = $mainMod SHIFT, B, exec, sh ~/.config/waybar/launch.sh
+# Actions
+bind = $mainMod SHIFT, B, exec, sh ~/.config/waybar/launch.sh # Reload Waybar configuration
 bind = , home, exec, hyprshot -m window
 bind = shift, home, exec, hyprshot -m region
 bind = $SUPER_SHIFT, l, exec, hyprlock
