--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -221,6 +221,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
 # Actions
+bind = $mainMod SHIFT, P, exec, sh ~/.config/hypr/scripts/hyprpaper.sh # Reload Hyprpaper configuration
 bind = $mainMod SHIFT, B, exec, sh ~/.config/waybar/launch.sh # Reload Waybar configuration
 bind = , home, exec, hyprshot -m window
 bind = shift, home, exec, hyprshot -m region
