--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -48,7 +48,7 @@ $menu = wofi --show drun
 # exec-once = waybar & hyprpaper & firefox
 
 exec-once = sh ~/.config/waybar/launch.sh
-exec-once = waybar & swaync & hypridle & nm-applet --indicator & hyprpaper & blueman-applet
+exec-once = swaync & hypridle & nm-applet --indicator & hyprpaper & blueman-applet
 
 #############################
 ### ENVIRONMENT VARIABLES ###
