--- a/hyprlock/.config/hypr/hyprlock.conf
+++ b/hyprlock/.config/hypr/hyprlock.conf
@@ -2,7 +2,7 @@ source = $HOME/.config/hypr/mocha.conf
 
 $accent = $mauve
 $accentAlpha = $mauveAlpha
-$font = JetBrainsMono Nerd Font
+$font = 0xProto Nerd Font
 
 # GENERAL
 general {
