--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -33,7 +33,7 @@ monitor=DP-2,preferred,auto,auto
 # Set programs that you use
 $terminal = ghostty
 $fileManager = nautilus
-$menu = wofi --show drun
+$menu = rofi -show drun
 
 
 #################
