--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -47,8 +47,9 @@ $menu = rofi -show drun
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
-exec-once = sh ~/.config/waybar/launch.sh
-exec-once = swaync & hypridle & nm-applet --indicator & hyprpaper & blueman-applet
+#exec-once = sh ~/.config/waybar/launch.sh
+exec-once = hyprpanel
+exec-once = hypridle & nm-applet --indicator & hyprpaper & blueman-applet
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -221,6 +222,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
 # Actions
+bind = $SUPER_SHIFT, f, fullscreen
 bind = $mainMod SHIFT, P, exec, sh ~/.config/hypr/scripts/hyprpaper.sh # Reload Hyprpaper configuration
 bind = $mainMod SHIFT, B, exec, sh ~/.config/waybar/launch.sh # Reload Waybar configuration
 bind = , home, exec, hyprshot -m window
